# hermes-employee

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  install.sh  pyproject.toml
employee/: __init__.py  __main__.py  cli.py  config.py  db.py  filter.py  session.py  template.py  todo.py  yaml_config.py
employee/commands/: __init__.py  config.py  daemon.py  message.py  session.py  source.py  todo.py
employee/sources/: __init__.py  dingtalk.py  github.py  inbox.py
hermes_employee_plugin/: __init__.py  _common.py  background.py  hooks.py  plugin.yaml  tools.py
hermes_employee_plugin/skills/employee/: SKILL.md
skills/start_hemployee/: SKILL.md
skills/stop_hemployee/: SKILL.md
tests/: test_background.py  test_cli.py  test_db.py  test_dingtalk.py  test_filter.py  test_inbox.py  test_session.py  test_template.py  test_todo.py  test_yaml_config.py
